--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -15,9 +15,12 @@
  
 <div class="row">
   <div class="col-xs-12 col-12 col-md-4 form-group">
-    <input class="form-control" #drp="bsDaterangepicker" bsDaterangepicker>
+    <input class="form-control" #drp="bsDaterangepicker" bsDaterangepicker [(ngModel)]="bsRangeValue">
   </div>
   <div class="col-xs-12 col-12 col-md-3 form-group">
     <button class="btn btn-success" (click)="drp.toggle()">Date Range Picker</button>
   </div>
+
+  <timepicker [(ngModel)]="mytime"></timepicker>
+  <pre class="alert alert-info">Time is: {{mytime}}</pre>
 </div>
