added login + registration + fixed datepicker

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,10 +1,4 @@
-<div class="imageflow">
-
-    <div class="row">
-        <div class="col-md-6">
-
-        </div>
-        <div class="col-md-6"></div>
-
-    </div>
+<div class="container">
+        <button class="btn" routerLink="register">register</button>
+        
 </div>
