--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
   <a class="navbar-brand" routerLink="/">Food Store</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
+    aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -12,12 +13,13 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="online-orders">Online Orders</a>
       </li>
-      <li class="nav-item">
-          <a class="nav-link" routerLink="login">Login</a>
-        </li>
-      <li ngbDropdown  class="nav-item dropdown show" >
-        <a ngbDropdownToggle class=" dropdown-toggle nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User</a>
-        <div ngbDropdownMenu  class="dropdown-menu show" aria-labelledby="dropdown01">
+      <li class="nav-item navbar-right">
+        <a class="nav-link" routerLink="login">Login</a>
+      </li>
+      <li ngbDropdown class="nav-item dropdown show">
+        <a ngbDropdownToggle class=" dropdown-toggle nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">User</a>
+        <div ngbDropdownMenu class="dropdown-menu show" aria-labelledby="dropdown01">
           <a class="dropdown-item" routerLink="">My Reservations</a>
           <a class="dropdown-item" routerLink="">My Orders</a>
           <a class="dropdown-item" routerLink="">Log Out</a>
