--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -1,16 +1,6 @@
+<!--
 <div class="row">
-  <div class="col-xs-12 col-12 col-md-4 form-group">
-    <input type="text"
-           class="form-control"
-           [minDate]="minDate"
-           [maxDate]="maxDate"
-           #dp="bsDatepicker"
-           bsDatepicker [(bsValue)]="bsValue">
-  </div>
-  <div class="col-xs-12 col-12 col-md-3 form-group">
-    <button class="btn btn-success" (click)="dp.toggle()">Date Picker</button>
-  </div>
-</div>
+
 <br>
  
 <div class="row">
@@ -21,6 +11,52 @@
     <button class="btn btn-success" (click)="drp.toggle()">Date Range Picker</button>
   </div>
 
-  <timepicker [(ngModel)]="mytime"></timepicker>
+  
   <pre class="alert alert-info">Time is: {{mytime}}</pre>
+</div>
+-->
+
+<div class="imageflow">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-4 "></div>
+      <div class="col-md-4 form-group">
+        <label>Reservation Date</label>
+        <input class="form-control" placeholder="Datepicker" bsDatepicker [minDate]="minDate" [maxDate]="maxDate" #dp="bsDatepicker" [bsConfig]="bsConfig">
+      </div>
+      <div class="col-md-4 form-group">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 "></div>
+      <div class="col-md-4 form-group">
+        <label>Reservation Time</label>
+        <timepicker [(ngModel)]="mytime"></timepicker>
+      </div>
+      <div class="col-md-4 form-group">
+      </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4 "></div>
+        <div class="col-md-4 form-group">
+          <label>No of People</label>
+            <input type="number" class="form-control" id="usr">
+        </div>
+        <div class="col-md-4 form-group">
+        </div>
+      </div>
+
+      <div class="row">
+          <div class="col-md-4 "></div>
+          <div class="col-md-4 form-group">
+            <button class="btn btn-danger ">Reserve</button>
+          </div>
+          <div class="col-md-4 form-group">
+          </div>
+        </div>
+
+  </div>
 </div>
