--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,20 @@
 <div class="container">
+    <div *ngFor="let alert of alerts">
+        <alert type="danger" [dismissOnTimeout]="alert.timeout">{{ alert.msg }}</alert>
+    </div>
+
+    <form #f="ngForm">
+        <div class="form-group">
+            <label>Username</label>
+            <input name="username" type="text" class="form-control" [(ngModel)]="username" required>
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input name="password" type="text" class="form-control" [(ngModel)]="password" required>
+        </div>
+        <button [disabled]="!f.valid" (click)="login()" class="btn btn-danger">Log In</button>
         <button class="btn" routerLink="register">register</button>
-        
+    </form>
+    
+    
 </div>
