--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -22,7 +22,7 @@
         <div ngbDropdownMenu class="dropdown-menu show" aria-labelledby="dropdown01">
           <a class="dropdown-item" routerLink="">My Reservations</a>
           <a class="dropdown-item" routerLink="">My Orders</a>
-          <a class="dropdown-item" routerLink="">Log Out</a>
+          <a class="dropdown-item" (click)="onLogout()" href="#" >Log Out</a>
         </div>
       </li>
     </ul>
