--- a/src/app/components/online-orders/online-orders.component.css
+++ b/src/app/components/online-orders/online-orders.component.css
@@ -1,3 +1,15 @@
 .sticky-top { 
     top: 80px;
   }
+
+.card { 
+    margin-bottom: 30px;
+  }
+  
+.card-footer {
+    padding: 0;
+  }
+  
+.card-footer button {
+    cursor: pointer;
+  }
