--- a/src/app/components/online-orders/online-orders.component.html
+++ b/src/app/components/online-orders/online-orders.component.html
@@ -1,39 +1,36 @@
 <div class="container">
-<div class="row">
-  <div class="col-md-3">
+  <div class="row">
+    <div class="col-md-3">
       <div class="sticky-top">
-          <div class="list-group">
-            <a class="list-group-item list-group-item-action" [class.active]="!category" routerLink="/">All Categories</a>
-            
-            <a class="list-group-item list-group-item-action" [class.active]="!category" routerLink="/">Breakfast</a>
-            
-            <a class="list-group-item list-group-item-action" [class.active]="!category" routerLink="/">Lunch</a>
-            
-            <a class="list-group-item list-group-item-action" [class.active]="!category" routerLink="/">Dinner</a>
-            
-            <a class="list-group-item list-group-item-action" [class.active]="!category" routerLink="/">Bevarages</a>
-            
-            <a class="list-group-item list-group-item-action" [class.active]="!category" routerLink="/">Appertisers</a>
-           
-      
+        <div class="list-group">
+          <a class="list-group-item list-group-item-action" routerLink="/">All Categories</a>
+          <a class="list-group-item list-group-item-action" routerLink="/">Breakfast</a>
+          <a class="list-group-item list-group-item-action" routerLink="/">Lunch</a>
+          <a class="list-group-item list-group-item-action" routerLink="/">Dinner</a>
+          <a class="list-group-item list-group-item-action" routerLink="/">Bevarages</a>
+          <a class="list-group-item list-group-item-action" routerLink="/">Appertisers</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-9">
+      <div class="row">
+          <ng-container *ngFor="let p of cards">
+        <div class="col">
+          <div class="card">
+            <img class="card-img-top" src="assets/dish.jpg" alt="Image Not Available" width="200px">
+            <div class="card-body">
+              <h4 class="card-title">Title</h4>
+              <p class="card-text">Price</p>
+            </div>
+            <div class="card-footer">
+              <button (click)="ok()" class="btn btn-secondary btn-block">Add to Cart</button>
+
+            </div>
           </div>
         </div>
+      </ng-container>
+
+      </div>
+    </div>
   </div>
-  <div class="col-md-9">
-      <div class="card">
-          <!--<img *ngIf="product.imageUrl" class="card-img-top" src="assets/dish.jpg" alt="hi"> -->
-          <div class="card-body">
-            <h4 class="card-title">Title</h4>
-            <p class="card-text">Price</p>
-          </div>
-          <div class="card-footer">
-            <button
-              (click)="ok()"
-              class="btn btn-secondary btn-block">Add to Cart</button>
-            
-          </div>
-        </div>    
-        
-  </div>
-</div>
 </div>
