--- a/src/app/components/online-orders/online-orders.component.html
+++ b/src/app/components/online-orders/online-orders.component.html
@@ -17,18 +17,18 @@
         <ng-container *ngFor="let p of filteredProducts  ; let i = index">
           <div class="col" style="width:15rem;">
             <div class="card">
-              <img class="card-img-top" src="{{p.image}}" alt="Image Not Available" width="200px">
+              <img class="card-img-top" [src]="p.image" alt="Image Not Available" width="200px">
               <div class="card-body">
                 <h4 class="card-title">{{p.name}}</h4>
                 <p class="card-text">Rs.{{p.price}}</p>
               </div>
               <div class="card-footer">
-                <button (click)="ok()" class="btn btn-secondary btn-block">Add to Cart</button>
+                <button (click)="addToCart()" class="btn btn-secondary btn-block">Add to Cart</button>
 
               </div>
             </div>
           </div>
-          <div *ngIf="(i +1 )%3 ===0" class="w-100"></div>
+          <div *ngIf="(i +1 )%2 ===0" class="w-100"></div>
         </ng-container>
 
       </div>
