--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -1,62 +1,65 @@
-<!--
-<div class="row">
-
-<br>
- 
-<div class="row">
-  <div class="col-xs-12 col-12 col-md-4 form-group">
-    <input class="form-control" #drp="bsDaterangepicker" bsDaterangepicker [(ngModel)]="bsRangeValue">
-  </div>
-  <div class="col-xs-12 col-12 col-md-3 form-group">
-    <button class="btn btn-success" (click)="drp.toggle()">Date Range Picker</button>
-  </div>
-
-  
-  <pre class="alert alert-info">Time is: {{mytime}}</pre>
-</div>
--->
-
 <div class="imageflow">
   <div class="container">
 
-    <div class="row">
-      <div class="col-md-4 "></div>
-      <div class="col-md-4 form-group">
-        <label>Reservation Date</label>
-        <input class="form-control" placeholder="Datepicker" bsDatepicker [minDate]="minDate" [maxDate]="maxDate" #dp="bsDatepicker" [bsConfig]="bsConfig">
-      </div>
-      <div class="col-md-4 form-group">
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col-md-4 "></div>
-      <div class="col-md-4 form-group">
-        <label>Reservation Time</label>
-        <timepicker [(ngModel)]="mytime"></timepicker>
-      </div>
-      <div class="col-md-4 form-group">
-      </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-4 "></div>
+    <form #f="ngForm">
+      <div class="row">
+        <div class="col-md-4 ">
+        </div>
         <div class="col-md-4 form-group">
-          <label>No of People</label>
-            <input type="number" class="form-control" id="usr">
+          <div *ngFor="let alert of alerts">
+            <alert [type]="alert.type" [dismissOnTimeout]="alert.timeout">{{ alert.msg }}</alert>
+          </div>
         </div>
         <div class="col-md-4 form-group">
         </div>
       </div>
 
       <div class="row">
-          <div class="col-md-4 "></div>
-          <div class="col-md-4 form-group">
-            <button class="btn btn-danger">Reserve</button>
-          </div>
-          <div class="col-md-4 form-group">
-          </div>
+        <div class="col-md-4 ">
         </div>
+        <div class="col-md-4 form-group">
+          <label>Reservation Date</label>
+          <input class="form-control" [(ngModel)]="date" name="date" bsDatepicker [minDate]="minDate" [maxDate]="maxDate" #dp="bsDatepicker"
+            [bsConfig]="bsConfig">
+        </div>
+        <div class="col-md-4 form-group">
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-md-4 "></div>
+        <div class="col-md-4 form-group">
+          <label>Reservation Time</label>
+          <timepicker name="time" [(ngModel)]="mytime"></timepicker>
+        </div>
+        <div class="col-md-4 form-group">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 "></div>
+        <div class="col-md-4 form-group">
+          <label>No of People</label>
+          <input type="number" class="form-control" name="count" [(ngModel)]="count" required>
+        </div>
+        <div class="col-md-4 form-group">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 "></div>
+        <div class="col-md-4 form-group">
+          <button [disabled]="!f.valid" type="submit" class="btn btn-danger" (click)="addReservation()">Reserve</button>
+        </div>
+
+
+
+        <div class="col-md-4 form-group">
+        </div>
+      </div>
+    </form>
 
   </div>
 </div>
