--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,9 +13,13 @@
       <li *ngIf="authService.loggedIn()" class="nav-item">
         <a class="nav-link" routerLink="online-orders">Online Orders</a>
       </li>
+      <li *ngIf="authService.loggedIn()" class="nav-item">
+        <a class="nav-link" routerLink="shopping-cart">Shopping Cart</a>
+      </li>
       <li class="nav-item ">
         <a *ngIf="!authService.loggedIn()" class="nav-link" routerLink="login">Login</a>
       </li>
+
       <li *ngIf="authService.loggedIn()" ngbDropdown class="nav-item dropdown show">
         <a ngbDropdownToggle class=" dropdown-toggle nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false">User</a>
