--- a/src/app/components/online-orders/online-orders.component.html
+++ b/src/app/components/online-orders/online-orders.component.html
@@ -17,7 +17,7 @@
         <ng-container *ngFor="let p of filteredProducts  ; let i = index">
           <div class="col" style="width:15rem;">
             <div class="card">
-              <img class="card-img-top" [src]="p.image" alt="Image Not Available" width="200px">
+              <img class="card-img-top" [src]="p.image" alt="Image Not Available">
               <div class="card-body">
                 <h4 class="card-title">{{p.name}}</h4>
                 <p class="card-text">Rs.{{p.price}}</p>
