--- a/src/app/components/online-orders/online-orders.component.html
+++ b/src/app/components/online-orders/online-orders.component.html
@@ -23,7 +23,7 @@
                 <p class="card-text">Rs.{{p.price}}</p>
               </div>
               <div class="card-footer">
-                <button (click)="addToCart()" class="btn btn-secondary btn-block">Add to Cart</button>
+                <button (click)="addToCart(p)" class="btn btn-secondary btn-block">Add to Cart</button>
 
               </div>
             </div>
