--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,13 +7,13 @@
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li *ngIf="authService.loggedIn()" class="nav-item">
+      <li  class="nav-item">
         <a class="nav-link" routerLink="reservations">Reservations</a>
       </li>
-      <li *ngIf="authService.loggedIn()" class="nav-item">
+      <li  class="nav-item">
         <a class="nav-link" routerLink="online-orders">Online Orders</a>
       </li>
-      <li *ngIf="authService.loggedIn()" class="nav-item">
+      <li  class="nav-item">
         <a class="nav-link" routerLink="shopping-cart">Shopping Cart</a>
       </li>
       <li class="nav-item ">
