--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -43,7 +43,7 @@
                     <td></td>
                     <td></td>
                     <td>
-                        <button class="btn btn-primary right">Purchase</button>
+                        <button routerLink="shipping" class="btn btn-primary right">Purchase</button>
                     </td>
                 </tr>
             </tfoot>
